Fixed overflow in cards

--- a/client/index.css
+++ b/client/index.css
@@ -181,6 +181,7 @@ paper-toast {
   display: flex;
   flex-direction: row;
   padding: 15px;
+  overflow: hidden;
 }
 
 .card-settings-icon {
